[Sonar] Critical bug fix